Fix select options not visible under expandable

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/ProductActions/ProductActions.style.override.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/ProductActions/ProductActions.style.override.scss
@@ -3,6 +3,10 @@
         background: var(--header-background);
     }
 
+    @include after-mobile {
+        z-index: 1000;
+    }
+
     &-AddToCartWrapper {
         @include mobile {
             border-top: none;
